--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
+
 spring.application.name=Template_IntelliJ_SpringBoot
-server.port=10000
+server.port=${PORT:10000}
+# Local Database Setting
 spring.datasource.url=jdbc:postgresql://localhost:5432/chatapp
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Cloud Database Setting
+#spring.datasource.url=postgresql://postgres:kKPbHQLNgeubIeBhtypTlwXOBoRnGPmK@roundhouse.proxy.rlwy.net:29854/railway
+#spring.datasource.username=postgres
+#spring.datasource.password=kKPbHQLNgeubIeBhtypTlwXOBoRnGPmK
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
