--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=${PORT:10000}
 # Local Database Setting
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:localhost}:${DATABASE_PORT:5432}/${DATABASE_NAME:chatapp}
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:monorail.proxy.rlwy.net}:${DATABASE_PORT:20853}/${DATABASE_NAME:railway}
 spring.datasource.username=${DATABASE_USER:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:1234}
+spring.datasource.password=${DATABASE_PASSWORD:FMBhiBdqdZcacAIGiKyrhjfqhqLBkbgZ}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
