--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,11 @@ spring.jpa.show-sql=true
 #spring.datasource.username=postgres
 #spring.datasource.password=1234
 #spring.jpa.hibernate.ddl-auto=update
+
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS512
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=your_keystore_password
+
+logging.level.org.springframework=DEBUG
+logging.level.com.your.package=DEBUG
