HTTPS 테스트코드 게시

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,10 @@ spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
 #server.ssl.enabled=true
-#server.ssl.key-store-type=PKCS512
-#server.ssl.key-store=classpath:keystore.p12
-#server.ssl.key-store-password=your_keystore_password
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=123456
+server.ssl.key-alias=springboot
 
 #logging.level.org.springframework=DEBUG
 #logging.level.com.your.package=DEBUG
