배포시 정상 동작하는지 확인

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=${PORT:10000}
 # Local Database Setting
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:monorail.proxy.rlwy.net}:${DATABASE_PORT:20853}/${DATABASE_NAME:railway}
+#spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:monorail.proxy.rlwy.net}:${DATABASE_PORT:20853}/${DATABASE_NAME:railway}
+spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
 #spring.datasource.url=postgres://railway:FMBhiBdqdZcacAIGiKyrhjfqhqLBkbgZ@postgres.railway.internal:5432/railway
 spring.datasource.username=${DATABASE_USER:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:FMBhiBdqdZcacAIGiKyrhjfqhqLBkbgZ}
