--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 
 spring.application.name=Template_IntelliJ_SpringBoot
 server.port=${PORT:10000}
-# Local Database Setting
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Deploy Database Setting (Under Publish 1.0)
 spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:monorail.proxy.rlwy.net}:${DATABASE_PORT:20853}/${DATABASE_NAME:railway}
 #spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
-#spring.datasource.url=postgres://railway:FMBhiBdqdZcacAIGiKyrhjfqhqLBkbgZ@postgres.railway.internal:5432/railway
 spring.datasource.username=${DATABASE_USER:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:FMBhiBdqdZcacAIGiKyrhjfqhqLBkbgZ}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -16,12 +17,3 @@ spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:postgresql://localhost:5432/chatapp
 #spring.datasource.username=postgres
 #spring.datasource.password=1234
-#spring.jpa.hibernate.ddl-auto=update
-
-#server.ssl.enabled=true
-#server.ssl.key-store-type=PKCS512
-#server.ssl.key-store=classpath:keystore.p12
-#server.ssl.key-store-password=your_keystore_password
-
-#logging.level.org.springframework=DEBUG
-#logging.level.com.your.package=DEBUG
